--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Rock, Paper, Scissors! </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-
+	<p>Rock Paper Scissors Game</p>
+	
+	<div class=row>
+		<span class="col-lg-6 col-md-6 ">
+			<p>You</p>
+			<img src=""></img>
+		</span>
+		
+		<span class="col-lg-6 col-md-6 ">
+			<p>The Computer</p>
+			<img src=""></img>
+		</span>
+	</div>
+	
+	<p>vs</p>
+	
+	<h2 id="result"></h2>
+	<p>Choose Your Move</p>
+	
+	<div class=row>
+		<span class="col-lg-4 col-md-4">
+			<img src="assets/rock.png" ></img>
+		</span>
+		
+		<span class="col-lg-4 col-md-4" class="paper">
+			<img src="assets/paper.png"></img>
+		</span>
+		
+		<span class="col-lg-4 col-md-4 ">
+			<img src="assets/scissors.png" class="scissors"></img>	
+		</span>
+		
+	</div>
+	<script type="text/javascript" src="script.js"></script>
 </body>
-</html>
+</html>	
